--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-minimal-pie-chart": "^9.1.2",
     "react-router": "^7.9.5",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17"
   },
